--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
 <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" href="styles.css">
-<title>Urmin | Prtfolio</title>
+<title>project | Prtfolio</title>
 </head>
 <body>
-    <!--Video background element
-    <video class="video-background" autoplay loop muted>
-        <source src="video/home background.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>-->
-
     <!--Navbar-->
 <nav class="navbar">
     <div class="container-fluid">
